--- a/assets/dockhorn2022genie.bib
+++ b/assets/dockhorn2022genie.bib
@@ -1,6 +1,6 @@
-@article{dockhorn2022genie,
-  title={{GENIE: Higher-Order Denoising Diffusion Solvers}},
-  author={Dockhorn, Tim and Vahdat, Arash and Kreis, Karsten},
-  journal={Advances in Neural Information Processing Systems},
-  year={2022}
+@inproceedings{dockhorn2022genie,
+    title={{{GENIE: Higher-Order Denoising Diffusion Solvers}}},
+    author={Dockhorn, Tim and Vahdat, Arash and Kreis, Karsten},
+    booktitle={Advances in Neural Information Processing Systems},
+    year={2022}
 }
